--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "fontsource-roboto": "^2.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
