--- a/project/package.json
+++ b/project/package.json
@@ -15,7 +15,8 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "unique-names-generator": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
