--- a/project/package.json
+++ b/project/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.33",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "firebase": "^7.14.6",
     "fontsource-roboto": "^2.1.3",
     "react": "^16.13.1",
@@ -16,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "typescript": "^4.2.3",
     "unique-names-generator": "^4.3.1",
     "uuid": "^8.3.0"
   },
