--- a/project/package.json
+++ b/project/package.json
@@ -9,10 +9,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.33",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
     "firebase": "^7.14.6",
     "fontsource-roboto": "^2.1.3",
     "react": "^16.13.1",
@@ -20,7 +16,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "typescript": "^4.2.3",
     "unique-names-generator": "^4.3.1",
     "uuid": "^8.3.0"
   },
@@ -55,12 +50,18 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.2.0",
     "@storybook/addon-actions": "^6.1.20",
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.20",
     "@storybook/node-logger": "^6.1.20",
     "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.20"
+    "@storybook/react": "^6.1.20",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.33",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-router-dom": "^5.1.7",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "typescript": "^4.2.3"
   }
 }
