--- a/project/package.json
+++ b/project/package.json
@@ -59,6 +59,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.3",
+    "@types/react-copy-to-clipboard": "^5.0.0",
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "eslint-plugin-react-hooks": "^4.2.0",
