--- a/project/package.json
+++ b/project/package.json
@@ -65,5 +65,8 @@
     "@types/react-router-dom": "^5.1.7",
     "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.2.3"
+  },
+  "resolutions": {
+    "babel-loader": "8.1.0"
   }
 }
